<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="search_hint">Enter search query</string>
    <string name="search_button">Search</string>
    <string name="settings">Settings</string>
    <string name="beginDate"><b>Begin Date</b></string>
    <string name="sortLabel"><b>Sort Order</b></string>
    <string name="filtersLabel"><b>News Desk Values</b></string>
    <string name="cbArts">Arts</string>
    <string name="cbFashion"><![CDATA[Fashion & Style]]></string>
    <string name="cbSports">Sports</string>
    <string name="btnSave">Save</string>
    <string name="sortOldest">Oldest</string>
    <string name="sortNewest">Newest</string>
    <string name="search_title">Search</string>
    <string name="share_title">Share</string>
    <string name="share_link">Share Link</string>
</resources>
